Backport to 1.20.1
Looks good to me
- Registry changes due to Forge
- Fixed excessive error messages
- More error detection